# EasyIL

./: .gitignore  README.md  pyproject.toml
collect_expert/: __init__.py  __main__.py  collector.py  envs.py
collect_expert/conf/: collect.yaml
collect_expert/rl/: __init__.py  sac.py
data/HalfCheetah-v5/expert_data/: trajectory_stats.json  trajs.npz
easyil/: __init__.py  collect.py  envs.py  eval.py  monotonicity.py  train.py  train_offline.py  train_online.py
easyil/actors/: __init__.py  chunk.py  gaussian.py
easyil/algos/: __init__.py  bc.py  gail.py  protocols.py  sac.py  sqil.py
easyil/algos/diffusion_bc/: __init__.py  module.py  networks.py  policy.py
easyil/algos/mlp_bc/: __init__.py  module.py  policy.py
easyil/buffers/: __init__.py  base.py  buffer.py
easyil/buffers/samplers/: __init__.py  balanced.py  chunk.py  random.py
easyil/callbacks/: __init__.py  offline.py  online.py
easyil/collectors/: __init__.py  offline.py  online.py
easyil/conf/: bc.yaml  collect.yaml  diffusion_bc.yaml  eval.yaml  gail.yaml  main.yaml  mlp_bc.yaml  monotonicity.yaml  sac.yaml  sqil.yaml  train_offline.yaml  train_online.yaml
easyil/conf/algo/: diffusion_bc.yaml  mlp_bc.yaml  sac.yaml
easyil/conf/env/: halfcheetah.yaml  humanoid.yaml
easyil/conf/logger/: base.yaml  (+1 more)
easyil/core/: __init__.py  registry.py
easyil/critics/: __init__.py  discriminator.py  qvalue.py
easyil/data_collection/: __init__.py  collector.py
easyil/datasets/: __init__.py  chunked.py  dataset.py  expert.py  loaders.py  trajectory.py  transition.py
easyil/expert/: __init__.py  collector.py
easyil/loggers/: __init__.py  swanlab.py
easyil/networks/: __init__.py  embeddings.py  mlp.py  unet.py
easyil/reward/: __init__.py  jax_net.py  mlp.py  pytorch_net.py
easyil/trainers/: __init__.py  offline.py  online.py
easyil/utils/: __init__.py  cfg.py
scripts/: collect.sh  collect_expert.sh  eval.sh  mono.sh  sweep.sh  train_dual.sh  train_offline.sh  train_online.sh
(+10 files in other folders)
